jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ci-service
spec:
  ports:
    - name: jenkins
      port: 8080
      targetPort: 8080
    - name: jenkins-agent
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins-ci
